tests/expectations/compiler/core/algorithms/integers/pedersen64/pedersen64_hash_to_i16.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `address` was found.
    --> compiler-test:29:46
     |
  29 |         let a: i16 = Pedersen64::hash_to_i16(addr_value);
     |                                              ^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `field` was found.
    --> compiler-test:31:46
     |
  31 |         let c: i16 = Pedersen64::hash_to_i16(field_value);
     |                                              ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `group` was found.
    --> compiler-test:32:46
     |
  32 |         let d: i16 = Pedersen64::hash_to_i16(group_value);
     |                                              ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `scalar` was found.
    --> compiler-test:39:46
     |
  39 |         let o: i16 = Pedersen64::hash_to_i16(scalar_value);
     |                                              ^^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `Foo` was found.
    --> compiler-test:41:46
     |
  41 |         let q: i16 = Pedersen64::hash_to_i16(Foo { a: 1u16, b: 1u16, });
     |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^
"""]
